# nicepy_python

./: .gitignore  README.md  license  main.py  pyproject.toml
docs/: index.html
nicepy/: __init__.py  logger.py
nicepy/nicepath/: __init__.py  core.py  exceptios.py
tests/: test_nicepath.py
